syntax = "proto3";

package kessel.inventory.v1beta2;

import "google/api/annotations.proto";
import "kessel/inventory/v1beta2/common.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

service KesselCheckService {
	// Checks for the existence of a single Relationship
	// (a Relation between a Resource and a Subject or Subject Set).
	rpc Check (CheckRequest) returns (CheckResponse) {
		option (google.api.http) = {
			post: "/api/inventory/v1beta2/check"
			body: "*"
		};
	};

	rpc CheckForUpdate (CheckForUpdateRequest) returns (CheckForUpdateResponse) {
		option (google.api.http) = {
			post: "/api/inventory/v1beta2/checkforupdate"
			body: "*"
		};
	};
}

message CheckRequest {
	// Required parameters (from an authz perspective)
	// - resource type and id
	// - permission (cannot be derived from the type as a type may have multiple 'read' permissions. Ex: https://github.com/RedHatInsights/rbac-config/blob/master/configs/prod/schemas/src/notifications.ksl#L31)
	// - user (possibly derived from an identity token)
	ObjectReference parent = 1 [(buf.validate.field).required = true];
	string relation = 2 [(buf.validate.field).string.min_len = 1];
	SubjectReference subject = 3 [(buf.validate.field).required = true];
	// Consistency consistency = 4;
}

message CheckResponse {
	enum Allowed {
		ALLOWED_UNSPECIFIED = 0;
		ALLOWED_TRUE = 1;
		ALLOWED_FALSE = 2;
		// e.g.  ALLOWED_CONDITIONAL = 3;
	}
	Allowed allowed = 1;
}

message CheckForUpdateRequest { // fully consistent
	// Required parameters (from an authz perspective)
	// - resource type and id
	// - permission (cannot be derived from type as types may have multiple edit permissions Ex: https://github.com/RedHatInsights/rbac-config/blob/master/configs/prod/schemas/src/notifications.ksl#L37)
	// - user (possibly derived from an identity token)
	ObjectReference parent = 1 [(buf.validate.field).required = true];
	string relation = 2 [(buf.validate.field).string.min_len = 1];
	SubjectReference subject = 3 [(buf.validate.field).required = true];
}

message CheckForUpdateResponse {
	enum Allowed {
		ALLOWED_UNSPECIFIED = 0;
		ALLOWED_TRUE = 1;
		ALLOWED_FALSE = 2;
		// e.g.  ALLOWED_CONDITIONAL = 3;
	}
	Allowed allowed = 1;
}