syntax = "proto3";

package kessel.inventory.v1beta2;

import "buf/validate/validate.proto";
import "kessel/inventory/v1beta2/request_pagination.proto";
import "kessel/inventory/v1beta2/subject_reference.proto";
import "kessel/inventory/v1beta2/consistency.proto";
import "kessel/inventory/v1beta2/representation_type.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

message StreamedListObjectsRequest {
  RepresentationType object_type = 1 [(buf.validate.field).required = true];
  string relation = 2 [(buf.validate.field).string.min_len = 1];
  SubjectReference subject = 3 [(buf.validate.field).required = true];
  optional RequestPagination pagination = 4;
  optional Consistency consistency = 5;
}
